# ifoundthephone

./: Cargo.toml  README.md  Rocket.toml
sql/: devices.sql  sessions.sql  users.sql
src/: main.rs  routes.rs  user.rs
src/routes/: auth.rs  db.rs  email.rs  form_structs.rs  route_structs.rs
static/: components.css  index.css  index.js
templates/: device_found.html.hbs  index.html.hbs  login.html.hbs  nav.html.hbs  profile.html.hbs  signup.html.hbs
