[package]
name = "ifoundthephone"
version = "0.1.0"
edition = "2018"


[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"
rand = "0.8.4"
tokio-postgres = "0.7.5"
dotenv = "0.15.0"
ring = "0.16.20"
hex = "0.4.0"
lettre = "0.10.0-rc.4"

[dependencies.rocket_dyn_templates]
features = ["handlebars"]